add section1 to article

--- a/writing/includes/abbreviations.tex
+++ b/writing/includes/abbreviations.tex
@@ -1,6 +1,6 @@
 \DeclareAcronym{ai}{
 	short={AI},
-	long={Artificial Inteligence},
+	long={Artificial Intelligence},
 }
 \DeclareAcronym{ml}{
 	short={ML},
