--- a/writing/includes/dedication.tex
+++ b/writing/includes/dedication.tex
@@ -13,7 +13,7 @@
 	\section*{Dedication}
 \end{center}
 \begin{dedication}
-	To my adorable mother
+	To my dear mother
 	
 	To my dear father
 	
@@ -21,7 +21,7 @@
 	
 	To my dear brothers
 	
-	To my dear grandmother
+	To my adorable grandmother
 	
 	To all my uncles, aunts and cousins
 	
