--- a/writing/includes/part2/chapter2.tex
+++ b/writing/includes/part2/chapter2.tex
@@ -1,1 +1,6 @@
-\chapter{Results}
+\chapter{Results and discussion}
+\input{includes/part2/chapter2/section1.tex}
+\input{includes/part2/chapter2/section2.tex}
+\input{includes/part2/chapter2/section3.tex}
+\input{includes/part2/chapter2/section4.tex}
+\input{includes/part2/chapter2/section5.tex}
