--- a/writing/includes/part1.tex
+++ b/writing/includes/part1.tex
@@ -1,3 +1,4 @@
 \part{State of the art}
 \input{includes/part1/chapter1.tex}
 \input{includes/part1/chapter2.tex}
+\input{includes/part1/chapter3.tex}
