--- a/writing/includes/part1/chapter2.tex
+++ b/writing/includes/part1/chapter2.tex
@@ -1,2 +1,5 @@
 \chapter{Related works}
-\section{Old works}
+\input{includes/part1/chapter2/section1.tex}
+\input{includes/part1/chapter2/section2.tex}
+\input{includes/part1/chapter2/section3.tex}
+\input{includes/part1/chapter2/section4.tex}
