--- a/writing/includes/part2/chapter1.tex
+++ b/writing/includes/part2/chapter1.tex
@@ -1,5 +1,6 @@
-\chapter{Programs used}
-\section{Introduction}
-\subsection{sub 1}
-\subsubsection{sub sub 1.1}
-\subsubsection{sub sub 1.2}
+\chapter{Conception of Takalem gloves}
+\input{includes/part2/chapter1/section1.tex}
+\input{includes/part2/chapter1/section2.tex}
+\input{includes/part2/chapter1/section3.tex}
+\input{includes/part2/chapter1/section4.tex}
+\input{includes/part2/chapter1/section5.tex}
