--- a/writing/includes/abbreviations.tex
+++ b/writing/includes/abbreviations.tex
@@ -1,3 +1,15 @@
+\DeclareAcronym{sl}{
+	short={SL},
+	long={Sign language}
+}
+\DeclareAcronym{sls}{
+	short={SLs},
+	long={Sign languages}
+}
+\DeclareAcronym{slr}{
+	short={SLR},
+	long={Sign language recognition}
+}
 \DeclareAcronym{ai}{
 	short={AI},
 	long={Artificial Intelligence},
