--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -1,6 +1,29 @@
-@MastersThesis{okba1,
-	author = {Okba Bouziane},
-	title = {Mobile Application for the Management of a Smart TrashCan},
-	school = {Larbi Tebessi University},
-	year = {2020},
+@thesis{teaching,
+	author = {Hichem Abdelouafi and Mohammed Omari},
+	title = {Teaching Sign Language to the Deaf Children in Adrar, Algeria},
+	institution = {Ahmed Draia University - Adrar},
+	date = {2018},
+	pages = {12}
+}
+@report{chalenges,
+	author = {Hichem Abdelouafi},
+	title = {Challenges of Deaf Education in Algeria},
+	type = {report},
+	institution = {University of Adrar Algeria},
+	date = {2020},
+	pages = {12}
+}
+@book{sara,
+	author = {Sara Lanesman},
+	title = {Algerian Jewish Sign Language: its emergence and survival},
+	date = {2016},
+	institution = {Ishara Press},
+	isbn = {9780992922108},
+	ocn = {97809,92922108},
+	pages = {12}
+}
+@online{wiki,
+	title = {Algerian Sign Language - wikipedia},
+	date = {2022, December 31},
+	url = {https://en.wikipedia.org/wiki/Algerian_Sign_Language}
 }
