complete chapter 1, complete half of chapter 2

--- a/writing/includes/abstract.tex
+++ b/writing/includes/abstract.tex
@@ -1,9 +1,13 @@
 \begin{abstract}
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor ac turpis elementum tincidunt. Suspendisse maximus, justo eu lobortis tincidunt, ex metus consectetur est, ac volutpat urna velit non dui. Aenean dapibus lobortis lorem, eu sagittis sem scelerisque a. Proin a risus vitae mauris auctor ultricies vitae sed odio. Proin ut ipsum neque. Donec pretium felis eu lacus tempor lacinia. Sed condimentum auctor luctus. Vestibulum eget posuere mauris. Pellentesque eu erat ut dolor pharetra finibus a vitae libero. Duis in massa lacus. Sed pulvinar ligula vel viverra aliquam. Sed posuere ipsum eget ligula vulputate commodo. Duis in iaculis ex, in commodo arcu. Suspendisse eget mi lorem. Nullam eu ante semper, ullamcorper nibh sit amet, fringilla purus.
 	
+	\vspace{0.5cm}
+	
+	\providecommand{\keywords}[1]
+	{
+		\small	
+		\textbf{\textit{Keywords---}} #1
+	}
+	
+	\keywords{ sign language recognition, artificial intelligence, machine learning, deep learning}
 \end{abstract}
-\providecommand{\keywords}[1]
-{
-	\small	
-	\textbf{\textit{Keywords---}} #1
-}
-\keywords{sign language recognition, artificial intelligence, machine learning, deep learning}
