--- a/writing/includes/part1/chapter1.tex
+++ b/writing/includes/part1/chapter1.tex
@@ -3,3 +3,4 @@
 \input{includes/part1/chapter1/section2.tex}
 \input{includes/part1/chapter1/section3.tex}
 \input{includes/part1/chapter1/section4.tex}
+\input{includes/part1/chapter1/section5.tex}
