--- a/writing/main.tex
+++ b/writing/main.tex
@@ -60,9 +60,25 @@
 	short={RNN},
 	long={Recurrent Neural Network},
 }
+\DeclareAcronym{lstm}{
+	short={LSTM},
+	long={Long-Short Term Memory},
+}
+\DeclareAcronym{svm}{
+	short={SVM},
+	long={Support Vector Machines},
+}
 \DeclareAcronym{hmm}{
 	short={HMM},
 	long={Hidden Markov Model}
+}
+\DeclareAcronym{vr}{
+	short={VR},
+	long={Virtual Reality},
+}
+\DeclareAcronym{ar}{
+	short={AR},
+	long={Augmented Reality},
 }
 
 
