modifications on chapter 2

--- a/writing/includes/abstract.tex
+++ b/writing/includes/abstract.tex
@@ -1,5 +1,6 @@
 \begin{abstract}
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor ac turpis elementum tincidunt. Suspendisse maximus, justo eu lobortis tincidunt, ex metus consectetur est, ac volutpat urna velit non dui. Aenean dapibus lobortis lorem, eu sagittis sem scelerisque a. Proin a risus vitae mauris auctor ultricies vitae sed odio. Proin ut ipsum neque. Donec pretium felis eu lacus tempor lacinia. Sed condimentum auctor luctus. Vestibulum eget posuere mauris. Pellentesque eu erat ut dolor pharetra finibus a vitae libero. Duis in massa lacus. Sed pulvinar ligula vel viverra aliquam. Sed posuere ipsum eget ligula vulputate commodo. Duis in iaculis ex, in commodo arcu. Suspendisse eget mi lorem. Nullam eu ante semper, ullamcorper nibh sit amet, fringilla purus.
+	\paragraph{}
+	Sign language recognition plays a crucial role in facilitating communication between individuals with hearing impairments and non-signers. However, the lack of an Algerian Sign Language (ASP) dataset and limited time constraints pose challenges in developing a customized dataset. In this study, an existing American Sign Language (ASL) dataset is utilized, and a Long Short-Term Memory (LSTM) model is employed for sign classification. The LSTM model achieves an accuracy of 86.16\% for character-level classification and an impressive 98.05\% for word-level classification. Remarkably, the model exhibits minimal errors in word classification and infrequent errors in character classification, primarily due to the selection of the most frequently predicted sign from a pool of 150 predictions per gesture. While these results demonstrate the effectiveness of the model.
 	
 	\vspace{0.5cm}
 	
@@ -9,5 +10,5 @@
 		\textbf{\textit{Keywords---}} #1
 	}
 	
-	\keywords{ sign language recognition, artificial intelligence, machine learning, deep learning}
+	\keywords{ Sign Language Recognition, Machine Learning, Deep Learning, LSTM}
 \end{abstract}
