--- a/writing/main.tex
+++ b/writing/main.tex
@@ -15,7 +15,6 @@
 \date{\today}
 
 
-
 \DeclareAcronym{sl}{
 	short={SL},
 	long={Sign language}
@@ -52,6 +51,10 @@
 	short={ANN},
 	long={Artificial Neural Network}
 }
+\DeclareAcronym{dnn}{
+	short={DNN},
+	long={Deep Neural Network},
+}
 \DeclareAcronym{cnn}{
 	short={CNN},
 	long={Convolutional Neural Network},
@@ -72,6 +75,10 @@
 	short={HMM},
 	long={Hidden Markov Model}
 }
+\DeclareAcronym{crf}{
+	short={CRF},
+	long={conditional random field},
+}
 \DeclareAcronym{vr}{
 	short={VR},
 	long={Virtual Reality},
@@ -80,8 +87,10 @@
 	short={AR},
 	long={Augmented Reality},
 }
-
-
+\DeclareAcronym{imu}{
+	short={IMU},
+	long={Inertial Measurement Unit},
+}
 
 
 \begin{document}
