remove chapter 4 and alter chapter 3, add general introduction and general conclusion

--- a/writing/includes/abbreviations.tex
+++ b/writing/includes/abbreviations.tex
@@ -2,9 +2,17 @@
 	short={SL},
 	long={Sign language}
 }
-\DeclareAcronym{sls}{
-	short={SLs},
-	long={Sign languages}
+\DeclareAcronym{asp}{
+	short={ASP},
+	long={Algerian sign language}
+}
+\DeclareAcronym{ajs}{
+	short={AJSL},
+	long={Algerian jewish sign language}
+}
+\DeclareAcronym{fsl}{
+	short={FSL},
+	long={French sign language}
 }
 \DeclareAcronym{slr}{
 	short={SLR},
@@ -22,9 +30,13 @@
 	short={DL},
 	long={Deep Learning},
 }
-\DeclareAcronym{nn}{
-	short={NN},
-	long={Neural Network}
+\DeclareAcronym{ann}{
+	short={ANN},
+	long={Artificial Neural Network}
+}
+\DeclareAcronym{dnn}{
+	short={DNN},
+	long={Deep Neural Network},
 }
 \DeclareAcronym{cnn}{
 	short={CNN},
@@ -33,4 +45,32 @@
 \DeclareAcronym{rnn}{
 	short={RNN},
 	long={Recurrent Neural Network},
+}
+\DeclareAcronym{lstm}{
+	short={LSTM},
+	long={Long-Short Term Memory},
+}
+\DeclareAcronym{svm}{
+	short={SVM},
+	long={Support Vector Machines},
+}
+\DeclareAcronym{hmm}{
+	short={HMM},
+	long={Hidden Markov Model}
+}
+\DeclareAcronym{crf}{
+	short={CRF},
+	long={conditional random field},
+}
+\DeclareAcronym{vr}{
+	short={VR},
+	long={Virtual Reality},
+}
+\DeclareAcronym{ar}{
+	short={AR},
+	long={Augmented Reality},
+}
+\DeclareAcronym{imu}{
+	short={IMU},
+	long={Inertial Measurement Unit},
 }
