--- a/writing/includes/part2.tex
+++ b/writing/includes/part2.tex
@@ -1,3 +1,9 @@
 \part{Contribution}
-\input{includes/part2/chapter1.tex}
-\input{includes/part2/chapter2.tex}
+\chapter{Conception of TAKALEM gloves}
+\input{includes/part2/section1.tex}
+\input{includes/part2/section2.tex}
+\input{includes/part2/section3.tex}
+\input{includes/part2/section4.tex}
+\input{includes/part2/section5.tex}
+\input{includes/part2/section6.tex}
+\input{includes/part2/section7.tex}
