--- a/writing/includes/references.bib
+++ b/writing/includes/references.bib
@@ -1,3 +1,20 @@
+@book{sara,
+	author = {Sara Lanesman},
+	title = {Algerian Jewish Sign Language: its emergence and survival},
+	date = {2016},
+	institution = {Ishara Press},
+	isbn = {9780992922108},
+	ocn = {97809,92922108},
+	pages = {12}
+}
+@article{5perc,
+	author = {Sahoo, Ashok and Mishra, Gouri and Ravulakollu, Kiran},
+	title = {Sign language recognition: State of the art},
+	year = {2014},
+	month = {02},
+	volume = {9},
+	journal = {ARPN Journal of Engineering and Applied Sciences}
+}
 @thesis{teaching,
 	author = {Hichem Abdelouafi and Mohammed Omari},
 	title = {Teaching Sign Language to the Deaf Children in Adrar, Algeria},
@@ -8,22 +25,28 @@
 @report{chalenges,
 	author = {Hichem Abdelouafi},
 	title = {Challenges of Deaf Education in Algeria},
-	type = {report},
 	institution = {University of Adrar Algeria},
 	date = {2020},
 	pages = {12}
 }
-@book{sara,
-	author = {Sara Lanesman},
-	title = {Algerian Jewish Sign Language: its emergence and survival},
-	date = {2016},
-	institution = {Ishara Press},
-	isbn = {9780992922108},
-	ocn = {97809,92922108},
-	pages = {12}
-}
-@online{wiki,
+@misc{wiki,
 	title = {Algerian Sign Language - wikipedia},
 	date = {2022, December 31},
-	url = {https://en.wikipedia.org/wiki/Algerian_Sign_Language}
+	note = {\url{https://en.wikipedia.org/wiki/Algerian_Sign_Language}}
+}
+@misc{asp_img,
+	title = {African Sign Lnaguages Resource Center - Algeria},
+	note = {\url{https://africansignlanguagesresourcecenter.com/profiles-of-african-sign-languages-and-deaf-culture-54-countries/algeria/}}
+}
+@misc{ethnologue,
+	title = {Algerian Sign Language - ethnologue},
+	note = {\url{https://www.ethnologue.com/25/language/asp/}}
+}
+@misc{flex,
+	title = {Flex-Sensor-components101},
+	note = {\url{https://components101.com/sensors/flex-sensor-working-circuit-datasheet}},
+}
+@misc{mpu,
+	title = {MPU6050-components101},
+	note = {\url{https://components101.com/sensors/mpu6050-module}},
 }
